# rust_node

./: .gitignore  .rtx.toml  Cargo.toml  Dockerfile  README.md  Taskfile.yml  async_std.rs  build.rs  colima.yaml  integration_test.sh  pyproject.toml  todo.txt
archive/: old_stuff.txt  rust_node.Dockerfile  scripts.txt
contract/: hardhat.config.ts  package-lock.json  package.json
contract/contracts/: Identifier.sol
contract/deploy/: authenticate.ts  deploy-greeter.ts  deploy-identifier.ts  use-greeter.ts  use-identifier.ts
contract/test/: main.test.ts
docker/: rust_node_builder.Dockerfile  toolbox.Dockerfile
helm_chart/: Chart.yaml  values.yaml
helm_chart/templates/: ipfs_deployment.yaml  ipfs_service.yaml  node_deployment.yaml  node_service.yaml
helm_chart/templates/ipfs/: ipfs_deployment.yaml  ipfs_service.yaml  ipfs_statefulset.yaml
helm_chart/templates/tests/: geth-connection.yaml  ipfs-connection.yaml  node-connection.yaml  node-ipfs-connection.yaml  postgres-connection.yaml  test-ipfs-connection.yaml  zksync-connection.yaml
helm_chart/templates/zksync/: geth_deployment.yaml  geth_service.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  postgres-volume.yaml
images/: node.Dockerfile  toolbox.Dockerfile
scripts/: integration_test.sh
src/: config.rs  identifier.rs  main.rs  messages.rs  payloads.rs  state.rs  utils.rs
src/client/: mod.rs  request_client.rs
src/client/reqwest/: client.rs  test_client.rs
src/clients/: mod.rs
src/clients/ipfs/: client.rs  mod.rs  models.rs  test_client.rs  test_data.rs
src/clients/reqwest/: client.rs  mod.rs  models.rs  test_client.rs
src/clients/zksync/: client.rs  mod.rs  models.rs  (+1 more)
src/controllers/: add.rs  authentication.rs  mod.rs  models.rs  register.rs  test_authentication.rs  test_register.rs
src/services/: config.rs  encryption.rs  file.rs  hash.rs  identity.rs  mod.rs  models.rs  state.rs  test_config.rs  test_encryption.rs  test_hash.rs  test_identity.rs
(+14 files in other folders)
