[package]
name = "rust_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
serde_json = "1.0.94"
mockall = "0.11.4"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.reqwest]
version = "0.11.14"
features = ["json"]

[dependencies.serde]
version = "1.0.156"
features = ["derive"]
