[package]
name = "rust_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
serde_json = "1.0.94"
tokio = "1.27.0"
tokio-util = "0.7.7"
async-trait = "0.1.68"
mockall_double = "0.3.0"
tempfile = "3.5.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.reqwest]
version = "0.11.16"
features = ["multipart", "stream"]

[dependencies.serde]
version = "1.0.156"
features = ["derive"]

[dev-dependencies]
mockall = "0.11.4"
http = "0.2.9"
