[package]
name = "rust_node"
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
serde_json = "1.0.94"
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.7"
tempfile = "3.5.0"
openssl = { version = "*", features = ["vendored"] } 
rust-crypto = "0.2.36"
ethers = { version = "2.0.9", features = ["ws", "legacy"] }
url = "2.5.0"
rustc-hex = "2.1.0"
axum = { version = "0.7.4", features = ["macros"]}

[dependencies.reqwest]
version = "0.11.16"
features = ["multipart", "stream"]

[dependencies.serde]
version = "1.0.156"
features = ["derive"]

[dev-dependencies]
http = "0.2.9"

[build-dependencies]
ethers-contract-abigen = "2.0.9"
ethers = { version = "2.0.9", features = ["ws"] }
